doc/grammar.ebnf
(* Ollin — grammaire formelle
   Source de vérité : syntax.ol
   Maintenu par : Claude — mettre à jour après chaque évolution de syntax.ol *)

program        = { stmt } EOF ;

stmt           = varDecl
               | whileStmt
               | ifStmt
               | tryStmt
               | throwStmt
               | funcDecl
               | returnStmt
               | assignStmt
               | exprStmt ;

varDecl        = "var" IDENT { "," IDENT } [ "=" expr { "," expr } ] NEWLINE ;
whileStmt      = "while" expr NEWLINE { stmt } "end" NEWLINE ;
ifStmt         = "if" expr "then" NEWLINE { stmt }
                 { "else" "if" expr "then" NEWLINE { stmt } }
                 [ "else" NEWLINE { stmt } ]
                 "end" NEWLINE ;
tryStmt        = "try" NEWLINE { stmt } "catch" IDENT NEWLINE { stmt } [ "else" NEWLINE { stmt } ] "end" NEWLINE ;
throwStmt      = "throw" expr NEWLINE ;
funcDecl       = "func" IDENT "(" [ params ] ")" NEWLINE { stmt } "end" NEWLINE ;
params         = param { "," param } [ "," "..." ] | "..." ;
param          = IDENT [ "=" literal ] ;
returnStmt     = "return" [ retvals ] NEWLINE ;
retvals        = "..."
               | expr { "," expr } [ "," "..." ] ;
assignStmt     = IDENT ( "=" | "+=" | "-=" | "*=" | "/=" | "%=" ) expr NEWLINE ;
exprStmt       = expr NEWLINE ;

expr           = logical ;
logical        = logicalAnd { "or" logicalAnd } ;
logicalAnd     = comparison { "and" comparison } ;
comparison     = additive { ( ">" | "<" | ">=" | "<=" | "==" ) additive } ;
additive       = multiplicative { ( "+" | "-" ) multiplicative } ;
multiplicative = unary { ( "*" | "/" | "%" ) unary } ;
unary          = [ "-" ] primary ;
primary        = NUMBER
               | STRING
               | BOOL
               | NIL
               | IDENT
               | call
               | "..."
               | "(" expr ")" ;

call           = IDENT "(" [ expr { "," expr } ] ")" ;

line_comment   = "##" { any \ newline } ;
block_comment  = "###" { any } "###" ;

NUMBER         = ( digit { [ "_" ] digit }* [ "." { digit | "_" }* ] )
               | ( "." digit { [ "_" ] digit }* ) ;
             (* les underscores sont ignorés : 1_000 == 1000 *)
STRING         = '"' { any \ '"' } '"' ;
BOOL           = "true" | "false" ;
NIL            = "nil" ;
IDENT          = ( letter | "_" ) { letter | digit | "_" } ;

digit          = "0" | ... | "9" ;
letter         = "a" | ... | "z" | "A" | ... | "Z" ;
